AI used fixed the groupFinder test